--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
 .App {
   text-align: center;
 }
+
+form{
+  font-size: 20px;
+  padding: 5px;
+  background-color: #a8a8a8;
+}
+
+.filters{
+  background-color: #dedede;
+  font-size: 20px;
+  padding: 5px;
+  box-shadow: 1px 1px 1px #333;
+}
+
+select{
+  margin-right: 20px;
+}
+
+ul{
+  padding: 0;
+  margin-top: 0;
+}
